--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
-    "expo": "~55.0.2",
+    "expo": "^55.0.2",
     "expo-status-bar": "~55.0.4",
     "lucide-react-native": "^0.575.0",
     "nativewind": "^4.2.2",
-    "react": "19.2.0",
-    "react-native": "0.83.2",
+    "react": "^19.2.0",
+    "react-native": "^0.83.2",
     "tailwind-merge": "^3.5.0"
   },
   "devDependencies": {
-    "@types/react": "~19.2.2",
+    "@types/react": "~19.2.10",
     "@types/react-native": "^0.72.8",
     "tailwindcss": "^3.4.19",
     "typescript": "~5.9.2"
