--- a/package.json
+++ b/package.json
@@ -9,18 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~55.0.6",
     "clsx": "^2.1.1",
-    "expo": "^55.0.2",
-    "expo-status-bar": "~55.0.4",
+    "expo": "~54.0.33",
+    "expo-status-bar": "~3.0.9",
     "lucide-react-native": "^0.575.0",
-    "nativewind": "^4.2.2",
-    "react": "^19.2.0",
-    "react-native": "^0.83.2",
-    "tailwind-merge": "^3.5.0"
+    "nativewind": "^4.2.1",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-web": "~0.21.0",
+    "tailwind-merge": "^3.5.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0"
   },
   "devDependencies": {
-    "@types/react": "~19.2.10",
+    "@types/react": "~19.1.0",
     "@types/react-native": "^0.72.8",
+    "babel-preset-expo": "^55.0.8",
     "tailwindcss": "^3.4.19",
     "typescript": "~5.9.2"
   },
