--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,14 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
-    "types": ["nativewind/types"]
+    "types": [
+      "nativewind/types"
+    ]
   },
-  "include": ["**/*.ts", "**/*.tsx", "app.d.ts"]
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    "app.d.ts",
+    "nativewind-env.d.ts"
+  ]
 }
